Refactoring of APIs, added unit test cases and updated docs (#4)
* Added unit test cases and corrected logs

* Updated tests and docs with APIs

* Updated test cases
