# api/handlers/accounts.go
@@ -24,6 +24,7 @@ const (
 		` VALUES ($1, $2, $3, $4, $5, $6)`
 	queryUpdateAccount = `UPDATE accounts SET name=$1, off_budget=$2, category=$3, updated_at=$4 WHERE id=$5`
 	queryDeleteAccount = `DELETE FROM accounts WHERE id=$1`
+	queryGetAccount    = "SELECT * FROM accounts WHERE id=$1"
 	queryGetAccounts   = `SELECT * FROM accounts`
 )
 
@@ -32,6 +33,7 @@ func (h *Handler) CreateAccount(w http.ResponseWriter, r *http.Request) {
 
 	err := json.NewDecoder(r.Body).Decode(&account)
 	if err != nil {
+		slog.Error("error decoding create account request", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -39,6 +41,7 @@ func (h *Handler) CreateAccount(w http.ResponseWriter, r *http.Request) {
 
 	account.ID, err = uuid.NewV7()
 	if err != nil {
+		slog.Error("error creating account id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -50,6 +53,7 @@ func (h *Handler) CreateAccount(w http.ResponseWriter, r *http.Request) {
 	_, err = h.db.Exec(r.Context(), queryCreateAccount,
 		account.ID, account.Name, account.OffBudget, account.Category, account.CreatedAt, account.UpdatedAt)
 	if err != nil {
+		slog.Error("error creating account in database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -69,6 +73,7 @@ func (h *Handler) UpdateAccount(w http.ResponseWriter, r *http.Request) {
 
 	accountID, err := uuid.Parse(id)
 	if err != nil {
+		slog.Error("error parsing account id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -78,6 +83,7 @@ func (h *Handler) UpdateAccount(w http.ResponseWriter, r *http.Request) {
 
 	err = json.NewDecoder(r.Body).Decode(&account)
 	if err != nil {
+		slog.Error("error decoding update account request", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -88,6 +94,7 @@ func (h *Handler) UpdateAccount(w http.ResponseWriter, r *http.Request) {
 	_, err = h.db.Exec(r.Context(), queryUpdateAccount,
 		account.Name, account.OffBudget, account.Category, account.UpdatedAt, accountID)
 	if err != nil {
+		slog.Error("error updating account in database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -102,6 +109,7 @@ func (h *Handler) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 
 	accountID, err := uuid.Parse(id)
 	if err != nil {
+		slog.Error("error parsing account id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -109,6 +117,7 @@ func (h *Handler) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 
 	_, err = h.db.Exec(r.Context(), queryDeleteAccount, accountID)
 	if err != nil {
+		slog.Error("error deleting account in database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -121,6 +130,7 @@ func (h *Handler) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 func (h *Handler) GetAccounts(w http.ResponseWriter, r *http.Request) {
 	rows, err := h.db.Query(r.Context(), queryGetAccounts)
 	if err != nil {
+		slog.Error("error getting accounts from database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -134,6 +144,7 @@ func (h *Handler) GetAccounts(w http.ResponseWriter, r *http.Request) {
 
 		err := rows.Scan(&acc.ID, &acc.Name, &acc.OffBudget, &acc.Category, &acc.CreatedAt, &acc.UpdatedAt)
 		if err != nil {
+			slog.Error("error scanning accounts row from database", "error", err)
 			buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 			return
@@ -143,6 +154,7 @@ func (h *Handler) GetAccounts(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if err := rows.Err(); err != nil {
+		slog.Error("error reading accounts rows from database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
