# api/handlers/transactions.go
@@ -18,14 +18,6 @@ import (
 )
 
 type (
-	// Payee model.
-	Payee struct {
-		ID        uuid.UUID `json:"id"`
-		Name      string    `json:"name"`
-		CreatedAt time.Time `json:"createdAt"`
-		UpdatedAt time.Time `json:"updatedAt"`
-	}
-
 	// Transaction model.
 	Transaction struct {
 		ID           uuid.UUID  `json:"id"`
@@ -53,23 +45,29 @@ type (
 const (
 	queryCreateTransaction = `INSERT INTO transactions (id, account_id, category_id, payee_id, credit,` +
 		` debit, name, notes, cleared_at, created_at, updated_at) VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11)`
-	queryUpdateTransaction = `UPDATE transactions SET account_id=$1, category_id=$2, payee_id=$3,` +
-		` credit=$4, debit=$5, name=$6, notes=$7, cleared_at=$8, updated_at=$9 WHERE id=$10`
-	queryDeleteTransaction = `DELETE FROM transactions WHERE id=$1`
+	queryUpdateTransaction = `UPDATE transactions SET category_id=$2, payee_id=$3,` +
+		` credit=$4, debit=$5, name=$6, notes=$7, cleared_at=$8, updated_at=$9 WHERE account_id=$1 AND id=$10`
+	queryDeleteTransaction = `DELETE FROM transactions WHERE account_id=$1 AND id=$2`
 	queryGetTransactions   = `SELECT t.*, c.name as category_name, p.name as payee_name FROM transactions AS t` +
-		` LEFT JOIN categories AS c ON t.category_id = c.id LEFT JOIN payees AS p ON t.payee_id = p.id`
-
-	queryCreatePayee = `INSERT INTO payees (id, name, created_at, updated_at) VALUES ($1, $2, $3, $4)`
-	queryUpdatePayee = `UPDATE payees SET name=$1, updated_at=$2 WHERE id=$3`
-	queryDeletePayee = `DELETE FROM payees WHERE id=$1`
-	queryGetPayees   = `SELECT * FROM payees`
+		` LEFT JOIN categories AS c ON t.category_id = c.id LEFT JOIN payees AS p ON t.payee_id = p.id WHERE t.account_id=$1`
 )
 
 func (h *Handler) CreateTransaction(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+
+	accountID, err := uuid.Parse(id)
+	if err != nil {
+		slog.Error("error parsing account id", "error", err)
+		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
+
+		return
+	}
+
 	var transaction Transaction
 
-	err := json.NewDecoder(r.Body).Decode(&transaction)
+	err = json.NewDecoder(r.Body).Decode(&transaction)
 	if err != nil {
+		slog.Error("error decoding create transaction request", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -77,19 +75,22 @@ func (h *Handler) CreateTransaction(w http.ResponseWriter, r *http.Request) {
 
 	transaction.ID, err = uuid.NewV7()
 	if err != nil {
+		slog.Error("error creating transaction id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
 	}
 
+	transaction.AccountID = accountID
 	transaction.CreatedAt = time.Now()
 	transaction.UpdatedAt = transaction.CreatedAt
 
 	_, err = h.db.Exec(r.Context(), queryCreateTransaction,
-		transaction.ID, transaction.AccountID, transaction.CategoryID, transaction.PayeeID,
+		transaction.ID, accountID, transaction.CategoryID, transaction.PayeeID,
 		transaction.Credit, transaction.Debit, transaction.Name, transaction.Notes,
 		nil, transaction.CreatedAt, transaction.UpdatedAt)
 	if err != nil {
+		slog.Error("error creating transaction in database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -106,9 +107,19 @@ func (h *Handler) CreateTransaction(w http.ResponseWriter, r *http.Request) {
 
 func (h *Handler) UpdateTransaction(w http.ResponseWriter, r *http.Request) {
 	id := r.PathValue("id")
+	tID := r.PathValue("tId")
 
-	transactionID, err := uuid.Parse(id)
+	accountID, err := uuid.Parse(id)
 	if err != nil {
+		slog.Error("error parsing account id", "error", err)
+		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
+
+		return
+	}
+
+	transactionID, err := uuid.Parse(tID)
+	if err != nil {
+		slog.Error("error parsing transaction id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -118,6 +129,7 @@ func (h *Handler) UpdateTransaction(w http.ResponseWriter, r *http.Request) {
 
 	err = json.NewDecoder(r.Body).Decode(&transaction)
 	if err != nil {
+		slog.Error("error decoding update transaction request", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
@@ -126,10 +138,11 @@ func (h *Handler) UpdateTransaction(w http.ResponseWriter, r *http.Request) {
 	transaction.UpdatedAt = time.Now()
 
 	_, err = h.db.Exec(r.Context(), queryUpdateTransaction,
-		transaction.AccountID, transaction.CategoryID, transaction.PayeeID,
+		accountID, transaction.CategoryID, transaction.PayeeID,
 		transaction.Credit, transaction.Debit, transaction.Name, transaction.Notes,
 		transaction.ClearedAt, transaction.UpdatedAt, transactionID)
 	if err != nil {
+		slog.Error("error updating transaction in database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -141,16 +154,27 @@ func (h *Handler) UpdateTransaction(w http.ResponseWriter, r *http.Request) {
 
 func (h *Handler) DeleteTransaction(w http.ResponseWriter, r *http.Request) {
 	id := r.PathValue("id")
+	tID := r.PathValue("tId")
 
-	transactionID, err := uuid.Parse(id)
+	accountID, err := uuid.Parse(id)
 	if err != nil {
+		slog.Error("error parsing account id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
 
 		return
 	}
 
-	_, err = h.db.Exec(r.Context(), queryDeleteTransaction, transactionID)
+	transactionID, err := uuid.Parse(tID)
 	if err != nil {
+		slog.Error("error parsing transaction id", "error", err)
+		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
+
+		return
+	}
+
+	_, err = h.db.Exec(r.Context(), queryDeleteTransaction, accountID, transactionID)
+	if err != nil {
+		slog.Error("error deleting transaction in database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -161,8 +185,19 @@ func (h *Handler) DeleteTransaction(w http.ResponseWriter, r *http.Request) {
 }
 
 func (h *Handler) GetTransactions(w http.ResponseWriter, r *http.Request) {
-	rows, err := h.db.Query(r.Context(), queryGetTransactions)
+	id := r.PathValue("id")
+
+	accountID, err := uuid.Parse(id)
 	if err != nil {
+		slog.Error("error parsing account id", "error", err)
+		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
+
+		return
+	}
+
+	rows, err := h.db.Query(r.Context(), queryGetTransactions, accountID)
+	if err != nil {
+		slog.Error("error getting transactions from database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -178,6 +213,7 @@ func (h *Handler) GetTransactions(w http.ResponseWriter, r *http.Request) {
 			&transaction.Name, &transaction.Credit, &transaction.Debit, &transaction.Notes, &transaction.ClearedAt,
 			&transaction.CreatedAt, &transaction.UpdatedAt, &transaction.CategoryName, &transaction.PayeeName)
 		if err != nil {
+			slog.Error("error scanning transactions row from database", "error", err)
 			buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 			return
@@ -187,6 +223,7 @@ func (h *Handler) GetTransactions(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if err := rows.Err(); err != nil {
+		slog.Error("error reading transactions rows from database", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
@@ -202,13 +239,24 @@ func (h *Handler) GetTransactions(w http.ResponseWriter, r *http.Request) {
 }
 
 func (h *Handler) ImportTransactions(w http.ResponseWriter, r *http.Request) { //nolint: funlen,cyclop
-	accountIDQuery := r.URL.Query().Get("accountId")
-	accountCategory := r.URL.Query().Get("accountCategory")
 	adapter := r.URL.Query().Get("adapter")
+	id := r.PathValue("id")
 
-	accountID, err := uuid.Parse(accountIDQuery)
+	accountID, err := uuid.Parse(id)
 	if err != nil {
+		slog.Error("error parsing account id", "error", err)
 		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
+
+		return
+	}
+
+	var account Account
+
+	err = h.db.QueryRow(r.Context(), queryGetAccount, accountID).Scan(&account.ID,
+		&account.Name, &account.OffBudget, &account.Category, &account.CreatedAt, &account.UpdatedAt)
+	if err != nil {
+		slog.Error("error getting account from database", "error", err)
+		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
 
 		return
 	}
@@ -240,7 +288,7 @@ func (h *Handler) ImportTransactions(w http.ResponseWriter, r *http.Request) { /
 		return
 	}
 
-	bankAdapter := adapters.New(adapter, accountCategory, nil)
+	bankAdapter := adapters.New(adapter, account.Category, nil)
 	adapterTransactions := bankAdapter.GetTransactions(rows)
 	importedTransactions := 0
 
@@ -372,133 +420,4 @@ func (h *Handler) getDataRows(fileName string, file multipart.File) ([][]string,
 	}
 
 	return rows, nil
-}
-
-func (h *Handler) CreatePayee(w http.ResponseWriter, r *http.Request) {
-	var payee Payee
-
-	err := json.NewDecoder(r.Body).Decode(&payee)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
-
-		return
-	}
-
-	payee.ID, err = uuid.NewV7()
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-		return
-	}
-
-	payee.CreatedAt = time.Now()
-	payee.UpdatedAt = payee.CreatedAt
-
-	_, err = h.db.Exec(r.Context(), queryCreatePayee,
-		payee.ID, payee.Name, payee.CreatedAt, payee.UpdatedAt)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusCreated)
-
-	err = json.NewEncoder(w).Encode(payee)
-	if err != nil {
-		slog.Error("error encoding payee response", "error", err)
-	}
-}
-
-func (h *Handler) UpdatePayee(w http.ResponseWriter, r *http.Request) {
-	id := r.PathValue("id")
-
-	payeeID, err := uuid.Parse(id)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
-
-		return
-	}
-
-	var payee Payee
-
-	err = json.NewDecoder(r.Body).Decode(&payee)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
-
-		return
-	}
-
-	payee.UpdatedAt = time.Now()
-
-	_, err = h.db.Exec(r.Context(), queryUpdatePayee,
-		payee.Name, payee.UpdatedAt, payeeID)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusNoContent)
-}
-
-func (h *Handler) DeletePayee(w http.ResponseWriter, r *http.Request) {
-	id := r.PathValue("id")
-
-	payeeID, err := uuid.Parse(id)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusBadRequest)
-
-		return
-	}
-
-	_, err = h.db.Exec(r.Context(), queryDeletePayee, payeeID)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-}
-
-func (h *Handler) GetPayees(w http.ResponseWriter, r *http.Request) {
-	rows, err := h.db.Query(r.Context(), queryGetPayees)
-	if err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-		return
-	}
-	defer rows.Close()
-
-	payees := []Payee{}
-
-	for rows.Next() {
-		var payee Payee
-
-		err := rows.Scan(&payee.ID, &payee.Name, &payee.CreatedAt, &payee.UpdatedAt)
-		if err != nil {
-			buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-			return
-		}
-
-		payees = append(payees, payee)
-	}
-
-	if err := rows.Err(); err != nil {
-		buildErrorResponse(w, err.Error(), http.StatusInternalServerError)
-
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-
-	err = json.NewEncoder(w).Encode(payees)
-	if err != nil {
-		slog.Error("error encoding payees response", "error", err)
-	}
 }
